fixed issue with do_processing.ipynb where event_ids sorted incorrectly

--- a/i3_processing/do_processing.ipynb
+++ b/i3_processing/do_processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,31 +65,75 @@
     "ssid_dict = dict.fromkeys(subj_set_ids)\n",
     "for subj_set_id in subj_set_ids:\n",
     "    subj_set = ntn_subjects[ntn_subjects['subject_set_id'] == subj_set_id]\n",
-    "    metadata = subj_set['metadata']\n",
-    "    subject_ids = list(subj_set['subject_id'])\n",
-    "    evt_ids = [json.loads(md)['event'] for md in metadata]\n",
+    "    metadata = list(subj_set['metadata'])\n",
+    "    subj_ids = list(subj_set['subject_id'])\n",
+    "    seen = []\n",
+    "    evt_ids = []\n",
+    "    subject_ids = []\n",
+    "    #print(metadata[0])\n",
+    "    for idx in range(0, len(metadata)):\n",
+    "        eid = json.loads(metadata[idx])['event']\n",
+    "        if eid not in seen:\n",
+    "            seen.append(eid)\n",
+    "            evt_ids.append(eid)\n",
+    "            subject_ids.append(subj_ids[idx])\n",
+    "            \n",
+    "            \n",
     "    val = zip(subject_ids, evt_ids)\n",
-    "    ssid_dict[subj_set_id] = [tup for tup in zip(subject_ids, evt_ids)]"
+    "    \n",
+    "    \n",
+    "    ssid_dict[subj_set_id] = [tup for tup in val]\n",
+    "    #ssid_dict[subj_set_id] = [{'event_id':tup[1], 'subject_id':tup[0]} for tup in val]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4271\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "for ssid in ssid_dict.keys():\n",
+    "    n += len(ssid_dict[ssid])\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file 1 of 19\n",
+      "Processing file 2 of 19\n",
+      "Processing file 3 of 19\n",
+      "Processing file 4 of 19\n",
+      "Processing file 5 of 19\n",
+      "Processing file 6 of 19\n",
+      "Processing file 7 of 19\n",
+      "Processing file 8 of 19\n",
+      "Processing file 9 of 19\n",
+      "Processing file 10 of 19\n",
+      "Processing file 11 of 19\n",
+      "Processing file 12 of 19\n",
+      "Processing file 13 of 19\n",
+      "Processing file 14 of 19\n",
+      "Processing file 15 of 19\n",
+      "Processing file 16 of 19\n",
       "Processing file 17 of 19\n",
-      "112119\n",
-      "classifier_rehyd_DST_IC86.2020_NuE.022067.001999.i3.zst\n",
       "Processing file 18 of 19\n",
-      "112118\n",
-      "classifier_rehyd_DST_IC86.2020_NuE.022067.000999.i3.zst\n",
-      "Processing file 19 of 19\n",
-      "112120\n",
-      "classifier_rehyd_DST_IC86.2020_NuE.022067.009999.i3.zst\n"
+      "Processing file 19 of 19\n"
      ]
     }
    ],
@@ -98,10 +142,13 @@
     "    \n",
     "    print(f'Processing file {idx+1} of {len(subj_set_ids)}')\n",
     "    ssid = subj_set_ids[idx]\n",
+    "    l = ssid_dict[ssid]\n",
+    "    l.sort(key=lambda x: x[1]) #sort the list in order of event id\n",
     "    event_ids = [tup[1] for tup in ssid_dict[ssid]]\n",
-    "    event_ids = list(set(event_ids))\n",
+    "    \n",
+    "    #event_ids = list(set(event_ids))\n",
     "    subject_ids = [tup[0] for tup in ssid_dict[ssid]]\n",
-    "    event_ids.sort() #sort the event_ids. this should speed things up since the \n",
+    "    #event_ids.sort() #sort the event_ids. this should speed things up since the \n",
     "    outfile = dataio.I3File(os.path.join('/home/aphillips/data/output', f'ntn_events_{ssid}.i3'), 'w') #open empty i3 for output\n",
     "    infile = dataio.I3File(i3_files[idx]) #open target i3\n",
     "\n",
@@ -129,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +203,13 @@
     "DF = pd.concat(dataframes) #create a master dataframe\n",
     "DF.to_csv('/home/aphillips/data/output/all_ntn_events_4-24-24.csv', index=False) #save"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
