updated mc_labeler q signal computations

--- a/i3_processing/do_processing.ipynb
+++ b/i3_processing/do_processing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,37 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing file 1 of 19\n",
-      "Processing file 2 of 19\n",
-      "Processing file 3 of 19\n",
-      "Processing file 4 of 19\n",
-      "Processing file 5 of 19\n",
-      "Processing file 6 of 19\n",
-      "Processing file 7 of 19\n",
-      "Processing file 8 of 19\n",
-      "Processing file 9 of 19\n",
-      "Processing file 10 of 19\n",
-      "Processing file 11 of 19\n",
-      "Processing file 12 of 19\n",
-      "Processing file 13 of 19\n",
-      "Processing file 14 of 19\n",
-      "Processing file 15 of 19\n",
-      "Processing file 16 of 19\n",
-      "Processing file 17 of 19\n",
-      "Processing file 18 of 19\n",
-      "Processing file 19 of 19\n"
+      "Processing file 1 of 19\n"
      ]
     }
    ],
    "source": [
-    "for idx in range(0, len(subj_set_ids)): #loop over all the ssids\n",
+    "for idx in range(0, 1):#len(subj_set_ids)): #loop over all the ssids\n",
     "    \n",
     "    print(f'Processing file {idx+1} of {len(subj_set_ids)}')\n",
     "    ssid = subj_set_ids[idx]\n",
@@ -176,13 +158,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ntn_events_112119.i3', 'ntn_events_112425.i3', 'ntn_events_112120.i3', 'ntn_events_112118.i3', 'ntn_events_112433.i3', 'ntn_events_112498.i3', 'ntn_events_112109.i3', 'ntn_events_112392.i3', 'ntn_events_112418.i3', 'ntn_events_112391.i3', 'ntn_events_112481.i3', 'ntn_events_112501.i3', 'ntn_events_112116.i3', 'ntn_events_112467.i3', 'ntn_events_112487.i3', 'ntn_events_112492.i3', 'ntn_events_112464.i3', 'ntn_events_112414.i3', 'ntn_events_112473.i3']\n",
+      "ntn_events_112119.i3\n",
+      "ntn_events_112425.i3\n",
+      "ntn_events_112120.i3\n",
+      "ntn_events_112118.i3\n",
+      "ntn_events_112433.i3\n",
+      "ntn_events_112498.i3\n",
+      "ntn_events_112109.i3\n",
+      "ntn_events_112392.i3\n",
+      "ntn_events_112418.i3\n",
+      "ntn_events_112391.i3\n",
+      "ntn_events_112481.i3\n",
+      "ntn_events_112501.i3\n",
+      "ntn_events_112116.i3\n",
+      "ntn_events_112467.i3\n",
+      "ntn_events_112487.i3\n",
+      "ntn_events_112492.i3\n",
+      "ntn_events_112464.i3\n",
+      "ntn_events_112414.i3\n",
+      "ntn_events_112473.i3\n"
+     ]
+    }
+   ],
    "source": [
     "dataframes = []\n",
-    "for f in [fname for fname in os.listdir('/home/aphillips/data/output/') if fname != 'output']:\n",
-    "    #print(f)\n",
+    "files = [fname for fname in os.listdir('/home/aphillips/data/output/') if fname != 'output']\n",
+    "print(files)\n",
+    "for f in files:\n",
+    "    print(f)\n",
     "    (outfile, hd5_name) = apply_modules(os.path.join('/home/aphillips/data/output/',f), '/home/aphillips/data/output/')\n",
     "    dataframes.append(process_data(os.path.join(os.getcwd(), 'output', hd5_name)))"
    ]
@@ -196,12 +207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4271\n"
+     ]
+    }
+   ],
+   "source": [
+    "DF = pd.concat(dataframes) #create a master dataframe\n",
+    "print(len(DF))\n",
+    "DF.to_csv('/home/aphillips/data/output/all_ntn_events_4-24-24.csv', index=False) #save"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF = pd.concat(dataframes) #create a master dataframe\n",
-    "DF.to_csv('/home/aphillips/data/output/all_ntn_events_4-24-24.csv', index=False) #save"
+    "(outfile, hd5_name) = apply_modules('./test.i3', '.')"
    ]
   },
   {
