--- a/data_processing/make_plots.ipynb
+++ b/data_processing/make_plots.ipynb
@@ -64,7 +64,8 @@
     "    labels_array = np.asarray(labels)\n",
     "    labels_val = labels_array.reshape(5,5)\n",
     "    labels_new = labels_val.T\n",
-    "    return labels_new\n"
+    "    return labels_new\n",
+    "types = ['Skimming','Cascade','Through-Going\\nTrack','Starting\\nTrack','Stopping\\nTrack'] #labels\n"
    ]
   },
   {
@@ -208,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = ntn_subjects[['subject_set_id', 'subject_id', 'event_id','energy','qtot', 'bg_charge', 'signal_charge','user agreement', 'user_classification', 'dnn_classification', 'new_classification', 'truth_classification']]\n",
+    "df = ntn_subjects[['subject_set_id', 'subject_id', 'event_id','energy','qtot', 'bg_charge', 'signal_charge','user agreement', 'user_classification', 'dnn_classification', 'corsika_label', 'new_classification', 'truth_classification']]\n",
     "df = df.rename(columns={'truth_classification':'original_mc_label', 'new_classification':'truth_classification'})\n",
     "df.to_csv('../../data/name-that-neutrino-mc-revised-5-6-24.csv', index=False)"
    ]
