comments to ap_modules.py

--- a/i3_processing/do_processing.ipynb
+++ b/i3_processing/do_processing.ipynb
@@ -15,16 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np # type: ignore\n",
     "import sys\n",
     "import os, fnmatch\n",
-    "import pandas as pd\n",
+    "import pandas as pd # type: ignore\n",
     "import glob\n",
     "import json\n",
-    "from icecube import dataio, dataclasses, icetray, MuonGun\n",
-    "from I3Tray import *\n",
-    "from icecube.hdfwriter import I3HDFWriter\n",
-    "import h5py\n",
+    "from icecube import dataio, dataclasses, icetray, MuonGun # type: ignore\n",
+    "from I3Tray import * # type: ignore\n",
+    "from icecube.hdfwriter import I3HDFWriter # type: ignore\n",
+    "import h5py # type: ignore\n",
     "from i3_tools import *"
    ]
   },
