updates to make_plots

--- a/data_processing/make_plots.ipynb
+++ b/data_processing/make_plots.ipynb
@@ -193,6 +193,7 @@
     "        new_classification.append(ntn_subjects['corsika_label'][i])\n",
     "\n",
     "ntn_subjects.insert(0, 'new_classification', new_classification)\n",
+    "pct_agreement = \n",
     "        "
    ]
   },
