--- a/phase2/do_processing.ipynb
+++ b/phase2/do_processing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_csv('./mc_labeled_sample_i3_7-23.i3.zst.hd5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_csv('./mc_labeled_sample_i3_7-23.i3.zst.hd5')"
+    "do_cuts('./mc_labeled_sample_i3_7-23.i3.zst', './', './events_df.csv')"
    ]
   },
   {
@@ -63,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_cuts('./mc_labeled_sample_i3_7-23.i3.zst', './', './events_df.csv')"
+    "extract_daq('./cuts_mc_labeled_sample_i3_7-23.i3.zst', '1', './')"
    ]
   },
   {
