--- a/phase2/do_processing.ipynb
+++ b/phase2/do_processing.ipynb
@@ -32,55 +32,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile = '../../ntn/sample_i3_7-23.i3.zst'"
+    "subrun = '009999'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_events(infile, './')"
+    "outdir = '/home/aphillips/phase2_data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infile_dir = '/data/sim/IceCube/2020/filtered/test/newprocessing/neutrino-generator/22067/0009000-0009999/classifier/'\n",
+    "infile_name = 'classifier_rehyd_DST_IC86.2020_NuE.022067.009999.i3.zst'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_events(os.path.join(infile_dir, infile_name), outdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length: 4\n"
+      "Length: 413\n"
      ]
     }
    ],
    "source": [
-    "make_csv('./mc_labeled_sample_i3_7-23.i3.zst.hd5')"
+    "make_csv(os.path.join(outdir,f'mc_labeled_{infile_name}.hd5'), outdir, subrun)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_cuts('./mc_labeled_sample_i3_7-23.i3.zst', './', './events_df.csv')"
+    "do_cuts(os.path.join(outdir,f'mc_labeled_{infile_name}'), outdir, os.path.join(outdir, f'events_df_{subrun}.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extract_daq('./cuts_mc_labeled_sample_i3_7-23.i3.zst', '1', './')"
+    "#why cant we remove non-daq frames first?\n",
+    "extract_daq(os.path.join(outdir, f'cuts_mc_labeled_{infile_name}'), '22067009999', outdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infile = dataio.I3File('/home/aphillips/phase2_data/daq_22067009999/daq_only-0000_cuts_mc_labeled_classifier_rehyd_DST_IC86.2020_NuE.022067.009999.i3.zst')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<icecube.icetray.I3Frame at 0x7f08ff6fe150>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infile.pop_frame()"
    ]
   },
   {
