--- a/phase2/do_processing.ipynb
+++ b/phase2/do_processing.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subrun = '009999'"
+    "subrun = '000001'"
    ]
   },
   {
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile_dir = '/data/sim/IceCube/2020/filtered/test/newprocessing/neutrino-generator/22067/0009000-0009999/classifier/'\n",
-    "infile_name = 'classifier_rehyd_DST_IC86.2020_NuE.022067.009999.i3.zst'"
+    "infile_dir = '/data/sim/IceCube/2020/filtered/test/newprocessing/neutrino-generator/21971/0000000-0000999/classifier/'\n",
+    "infile_name = 'classifier_rehyd_DST_IC86.2020_NuMu.021971.000001.i3.zst'"
    ]
   },
   {
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length: 413\n"
+      "Length: 1346\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "#why cant we remove non-daq frames first?\n",
-    "extract_daq(os.path.join(outdir, f'cuts_mc_labeled_{infile_name}'), '22067009999', outdir)"
+    "extract_daq(os.path.join(outdir, f'cuts_mc_labeled_{infile_name}'), '21971000001', outdir)"
    ]
   }
  ],
